커밋: 체인지로그 251012