@@ -10,14 +10,14 @@ import com.gbf.granblue_simulator.domain.move.prop.omen.OmenType;
 import com.gbf.granblue_simulator.domain.move.prop.status.StatusTargetType;
 import com.gbf.granblue_simulator.logic.actor.dto.ActorLogicResult;
 import com.gbf.granblue_simulator.logic.actor.dto.BattleStatusDto;
-import com.gbf.granblue_simulator.logic.actor.dto.NextMoveRequest;
 import com.gbf.granblue_simulator.logic.common.dto.DamageLogicResult;
 import com.gbf.granblue_simulator.logic.common.dto.SetStatusResult;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Component
 public class EnemyLogicResultMapper {
@@ -100,7 +100,8 @@ public class EnemyLogicResultMapper {
         if (damageLogicResult == null)
             damageLogicResult = DamageLogicResult.builder().build(); // 데미지가 발생하지 않은경우 빈 객체 생성
 
-        int hitCount = damageLogicResult.getDamages().stream().filter(damage -> damage > 0).toList().size();; // 적은 공격횟수가 가변인경우가 없음
+        int hitCount = damageLogicResult.getDamages().stream().filter(damage -> damage > 0).toList().size();
+        ; // 적은 공격횟수가 가변인경우가 없음
         int totalHitCount = hitCount + damageLogicResult.getAdditionalDamages().stream()
                 .map(additionalDamages -> additionalDamages.stream()
                         .filter(damage -> damage > 0)
@@ -108,24 +109,23 @@ public class EnemyLogicResultMapper {
                 .mapToInt(List::size)
                 .sum();
         int fatalChainGauge = partyMembers.stream()
-                .filter(battleActor -> battleActor.getActor().isMainCharacter()).findFirst()
+                .filter(battleActor -> battleActor.getActor().isLeaderCharacter()).findFirst()
                 .map(BattleActor::getFatalChainGauge).orElseGet(() -> 0);
 
         // 체력
-        List<Integer> hps = new ArrayList<>();
-        List<Integer> hpRates = new ArrayList<>();
-        hps.add(mainActor.getHp());
-        hpRates.add(mainActor.calcHpRate());
-        List<Integer> partyMemberHpList = partyMembers.stream().map(BattleActor::getHp).toList();
-        hps.addAll(partyMemberHpList);
-        List<Integer> partyMemberHpRateList = partyMembers.stream().map(BattleActor::calcHpRate).toList();
-        hpRates.addAll(partyMemberHpRateList);
+        List<Integer> hps = IntStream.range(0, 5).mapToObj(i -> 0).collect(Collectors.toList());
+        List<Integer> hpRates = IntStream.range(0, 5).mapToObj(i -> 0).collect(Collectors.toList());
+        hps.set(0, mainActor.getHp());
+        hpRates.set(0, mainActor.calcHpRate());
+        partyMembers.forEach(battleActor -> {
+            hps.set(battleActor.getCurrentOrder(), battleActor.getHp());
+            hpRates.set(battleActor.getCurrentOrder(), battleActor.calcHpRate());
+        });
 
         // 오의게이지
-        List<Integer> chargeGauges = new ArrayList<>();
-        chargeGauges.add(mainActor.getChargeGauge());
-        List<Integer> partyMemberChargeGauges = partyMembers.stream().map(BattleActor::getChargeGauge).toList();
-        chargeGauges.addAll(partyMemberChargeGauges);
+        List<Integer> chargeGauges = IntStream.range(0, 5).mapToObj(i -> 0).collect(Collectors.toList());
+        chargeGauges.set(0, mainActor.getChargeGauge());
+        partyMembers.forEach(battleActor -> chargeGauges.set(battleActor.getCurrentOrder(), battleActor.getChargeGauge()));
 
         // 추가된 스테이터스
         List<List<BattleStatusDto>> addedStatusList = setStatusResult.getAddedStatusesList().stream()
@@ -137,14 +137,24 @@ public class EnemyLogicResultMapper {
                 .map(removedBattleStatuses -> removedBattleStatuses.stream()
                         .map(BattleStatusDto::of).toList())
                 .toList();
+        // 결과 스테이터스
+        List<List<BattleStatus>> currentBattleStatusesList = IntStream.range(0, 5).mapToObj(i -> new ArrayList<BattleStatus>()).collect(Collectors.toList());
+        currentBattleStatusesList.set(0, mainActor.getBattleStatuses());
+        partyMembers.forEach(partyMember -> currentBattleStatusesList.set(partyMember.getCurrentOrder(), partyMember.getBattleStatuses()));
+        List<List<BattleStatusDto>> currentBattleStatusesDtoList = currentBattleStatusesList.stream()
+                .map(currentBattleStatuses -> currentBattleStatuses.stream()
+                        .map(BattleStatusDto::of).toList())
+                .toList();
+
         // 힐
         List<Integer> healValues = new ArrayList<>(setStatusResult.getHealValues());
 
         // 쿨다운
-        List<List<Integer>> cooldownList = new ArrayList<>();
-        cooldownList.add(new ArrayList<>());
-        List<List<Integer>> partyMemberCooldowns = partyMembers.stream().map(actor -> List.of(actor.getFirstAbilityCoolDown(), actor.getSecondAbilityCoolDown(), actor.getThirdAbilityCoolDown())).toList();
-        cooldownList.addAll(partyMemberCooldowns);
+        List<List<Integer>> cooldownList = IntStream.range(0, 5).mapToObj(i -> new ArrayList<Integer>()).collect(Collectors.toList());
+        partyMembers.forEach(actor -> {
+            cooldownList.set(actor.getCurrentOrder(), List.of(actor.getFirstAbilityCoolDown(), actor.getSecondAbilityCoolDown(), actor.getThirdAbilityCoolDown()));
+        });
+
 
         // 전조 있을때 처리
         BattleEnemy enemy = (BattleEnemy) mainActor;
@@ -158,7 +168,6 @@ public class EnemyLogicResultMapper {
                 .mainBattleActorId(mainActor.getId())
                 .mainActorId(mainActor.getActor().getId())
                 .mainBattleActorOrder(mainActor.getCurrentOrder())
-                .targetActorId(partyMembers.getFirst().getActor().getId()) // 적의 경우 타겟id 는 일단 아군 주인공으로 고정
                 .moveType(move.getType())
                 .motionType(move.getMotionType())
 
@@ -170,6 +179,7 @@ public class EnemyLogicResultMapper {
                 .fatalChainGauge(fatalChainGauge)
                 .addedBattleStatusesList(addedStatusList)
                 .removedBattleStatusesList(removedStatusList)
+                .currentBattleStatusesList(currentBattleStatusesDtoList)
                 .heals(healValues)
 
                 .omenType(omenType)
